# SnapBase

./: Makefile  README.md  config.py  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 2025_07_22_1959-ff626b100b70_make_name_fields_unique.py  2025_07_27_1145-3731f944ce34_add_unique_constraints_to_chapters_and_.py  2025_08_05_1346-2141863db566_real_username_column_to_store_real_.py
src/: handlers.py  schemas.py
src/constants/: messages.py
src/db/: models.py
src/handlers/: chapters.py  menu.py  problems.py  solutions.py  textbooks.py
src/keyboards/: chapters.py  menu.py  problems.py  solutions.py  suggestion_keyboard.py  textbooks.py
src/repositories/: chapters.py  problems.py  solutions.py  textbooks.py
src/services/: chapters.py  fuzzy_match.py  problems.py  solutions.py  textbooks.py
src/states/: chapters.py  problems.py  solutions.py  textbooks.py
src/utils/: fuzzy_matcher.py  helpers.py
