[project]
name = "snapbase"
version = "0.1.0"
description = ""
authors = [
    {name = "Miras Nametov",email = "tengekking8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "aiogram (>=3.21.0,<4.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "aiohttp[socks] (>=3.12.14,<4.0.0)",
    "aiohttp-socks (>=0.10.1,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.17.0"

